[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "fpdf2>=2.8.4",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "sift-stack-py>=0.8.5",
    "streamlit>=1.49.1",
]
